--- a/package.json
+++ b/package.json
@@ -27,13 +27,18 @@
     "coingecko-api": "^1.0.10",
     "crypto-browserify": "^3.12.0",
     "ethers": "^5.5.1",
+    "fastq": "^1.13.0",
     "https-browserify": "^1.0.0",
+    "nodelib": "^1.0.0",
     "os-browserify": "^0.3.0",
+    "run-parallel": "^1.2.0",
     "rxjs": "~6.6.0",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "tslib": "^2.3.0",
     "web3": "^1.6.0",
+    "webpack": "^5.61.0",
+    "webpack-dev-server": "^3.11.2",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
