--- a/package.json
+++ b/package.json
@@ -24,16 +24,23 @@
     "@types/axios": "^0.14.0",
     "assert": "^2.0.0",
     "axios": "^0.24.0",
+    "big-number": "^2.0.0",
+    "bignumber": "^1.1.0",
+    "bignumber.js": "^9.0.1",
     "coingecko-api": "^1.0.10",
+    "crc-32": "^1.2.0",
     "crypto-browserify": "^3.12.0",
     "ethers": "^5.5.1",
     "https-browserify": "^1.0.0",
+    "js-sha3": "^0.8.0",
     "os-browserify": "^0.3.0",
     "rxjs": "~6.6.0",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "tslib": "^2.3.0",
     "web3": "^1.6.0",
+    "web3-eth": "^1.6.0",
+    "web3-utils": "^1.6.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
