--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
     "big-number": "^2.0.0",
     "bignumber": "^1.1.0",
     "bignumber.js": "^9.0.1",
+    "chart.js": "^2.9.3",
     "coingecko-api": "^1.0.10",
     "crc-32": "^1.2.0",
     "crypto-browserify": "^3.12.0",
     "ethers": "^5.5.1",
     "https-browserify": "^1.0.0",
     "js-sha3": "^0.8.0",
+    "ng2-charts": "^2.4.2",
     "os-browserify": "^0.3.0",
     "rxjs": "~6.6.0",
     "stream-browserify": "^3.0.0",
